change styling to fit scss

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,7 @@
+@import "/styles/components/index.scss";
+// @import "~bootstrap/scss/bootstrap";
+// @import "bootstrap/dist/css/bootstrap.css";
+
 html,
 body {
   padding: 0;
