--- a/styles/components/registration.scss
+++ b/styles/components/registration.scss
@@ -3,6 +3,23 @@
   padding: 36px;
 }
 
+
+.main-form {
+    min-width: 100%;
+    height: 100vh;
+    margin: 0vw;
+    padding: 5vw ;
+    position:relative;
+    /* position:relative for .prevBtn and .nextBtn position:absolute; */
+}
+
+.main-form label{
+    display: block;
+    text-align: left;
+    font-size: 20px;
+    margin: 0 0 2vh 0;
+}
+
 input[type="text"] {
   width: 50%;
   padding: 0.5rem;
