--- a/styles/components/registration.scss
+++ b/styles/components/registration.scss
@@ -1,16 +1,20 @@
-.container{
-  border: 1px solid #e1dede;
-  padding: 36px;
-}
+// .container{
+//   border: 1px solid #e1dede;
+//   padding: 36px;
+// }
 
+
+// .main-form {
+//     min-width: 100%;
+//     height: 100vh;
+//     margin: 0vw;
+//     padding: 5vw ;
+//     position:relative;
+//     position:relative for .prevBtn and .nextBtn position:absolute;
+// }
 
 .main-form {
-    min-width: 100%;
-    height: 100vh;
-    margin: 0vw;
-    padding: 5vw ;
-    position:relative;
-    /* position:relative for .prevBtn and .nextBtn position:absolute; */
+  padding: 20px;
 }
 
 .main-form label{
