--- a/styles/components/registration.scss
+++ b/styles/components/registration.scss
@@ -17,19 +17,25 @@
   padding: 40px 20px;
 }
 
-.main-form label{
+  .main-form label{
     display: block;
     text-align: left;
     font-size: 20px;
     margin: 0 0 2vh 0;
 }
 
-input[type="text"] {
-  width: 100%;
+textarea, input[type="text"] {
+  width: 50%;
   padding: 0.5rem;
   margin: 16px 0;
 }
 
 input[type="radio"] {
   margin-bottom: 2rem;
+}
+
+@media (max-width: 600px) {
+input[type="text"] {
+  width: 100%;
+}
 }
