--- a/styles/components/registration.scss
+++ b/styles/components/registration.scss
@@ -24,7 +24,7 @@
     margin: 0 0 2vh 0;
 }
 
-textarea, input[type="text"] {
+textarea, select, input[type="text"] {
   width: 50%;
   padding: 0.5rem;
   margin: 16px 0;
