--- a/styles/components/registration.scss
+++ b/styles/components/registration.scss
@@ -28,6 +28,8 @@ textarea, select, input[type="text"] {
   width: 50%;
   padding: 0.5rem;
   margin: 16px 0;
+  font-size: 1rem;
+  display: block;
 }
 
 input[type="radio"] {
@@ -35,7 +37,7 @@ input[type="radio"] {
 }
 
 @media (max-width: 600px) {
-input[type="text"] {
+textarea, select, input[type="text"] {
   width: 100%;
 }
 }
