--- a/styles/components/registration.scss
+++ b/styles/components/registration.scss
@@ -13,18 +13,18 @@
   //     position:relative for .prevBtn and .nextBtn position:absolute;
   // }
 
-  .main-form {
+.main-form {
   padding: 40px 20px;
 }
 
-  .main-form label{
+.main-form label{
     display: block;
     text-align: left;
     font-size: 20px;
     margin: 0 0 2vh 0;
 }
 
-textarea, select, input[type="text"] {
+textarea, select, input[type=text] {
   width: 50%;
   padding: 0.5rem;
   margin: 16px 0;
@@ -32,12 +32,13 @@ textarea, select, input[type="text"] {
   display: block;
 }
 
-input[type="radio"] {
+label>input[type=radio] {
   margin-bottom: 2rem;
 }
 
+
 @media (max-width: 600px) {
-textarea, select, input[type="text"] {
+textarea, select, input[type=text] {
   width: 100%;
 }
 }
